<resources>
    <string name="app_name">Cookie Finder</string>
    <string name="background_image">Background Image</string>
    <string name="cookie_finder">Cookie Finder</string>
    <string name="daniel_olivera">Daniel Olivera</string>
    <string name="cookie">cookie</string>
    <string name="welcome_skip">Welcome Skip</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="settings_button">Settings button</string>
    <string name="background_image_for_menu">background image for menu</string>
    <string name="board_size">Board Size:</string>
    <string name="settings">Settings</string>
    <string name="cookies"># Cookies:</string>
    <string name="_4x6_grid">4x6 Grid</string>
    <string name="_5x10_grid">5x10 Grid</string>
    <string name="_6x15_grid">6x15 Grid</string>
    <string name="_6_cookies">6 Cookies</string>
    <string name="_10_cookies">10 Cookies</string>
    <string name="_15_cookies">15 Cookies</string>
    <string name="_20_cookies">20 Cookies</string>
    <string name="Game_Title">Cookie Finder!</string>
    <string name="left_cookie_image">Left Cookie Image</string>
    <string name="right_cookie_image">Right Cookie Image</string>
    <string name="you_win">You Win!</string>
    <string name="about_the_author">About the Author:</string>
    <string name="My_Info">Hi, I\'m Daniel Olivera. I\'m a student at SFU taking the Software Systems Program. This game is my third assignment in CMPT 276 with Dr. Brian Fraser. Hope you like it!</string>

    <string name="Game_Help">Click on a button in hopes of finding a delicious cookie! It\'s OK if you don\'t find one though! If you click a button that has no cookie, it\'ll tell you how many
        cookies there are left in that row and column. Use that information in any way you can to try and find all the cookies with the least amount of checks!</string>


    <string name="useful_links">Useful links:</string>

    <string name="link_to_course"><a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">CMPT276 Home Page</a></string>
    <string name="link_cookie_art"><a href="http://clipart-library.com/clipart/284327.htm">Cookie Art</a></string>
    <string name="link_background_art"><a href="https://opencoursehub.cs.sfu.ca/bfraser/solutions/276/images/ImageGallery/content/466031307_large.html">Background Art</a></string>
</resources>
